crates/cockpit-editor/tests/snapshots/golden_editor__golden_visual_delete.snap
---
source: crates/cockpit-editor/tests/golden_editor.rs
expression: "snapshot(\"visual_delete\", \"abcdef\", &chars(\"vlld\"))"
---
case:   visual_delete
start:  "abcdef"
keys:   v l l d
mode:   Normal
cursor: 0:0
dirty:  true
buffer:
  | ‸def
