crates/cockpit-editor/tests/snapshots/golden_editor__golden_yank_and_paste.snap
---
source: crates/cockpit-editor/tests/golden_editor.rs
expression: "snapshot(\"yank_and_paste\", \"duplicate\", &chars(\"yyp\"))"
---
case:   yank_and_paste
start:  "duplicate"
keys:   y y p
mode:   Normal
cursor: 1:0
dirty:  true
buffer:
  | duplicate
  | ‸duplicate
